# tree-sitter-ic10

./: .gitignore  Cargo.toml  README.md  binding.gyp  constants.txt  enums.txt  generate_data.py  grammar.js  logictypes.txt  operations.txt  package.json  tree-sitter.json
bindings/c/: tree-sitter-ic10.h  tree-sitter-ic10.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_ic10/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
corpus/: hash.ic10  network.ic10
data/: batchmodes.txt  constants.txt  deprecated.txt  enums.txt  logictypes.txt  operations.txt  reagentmodes.txt  slotlogictypes.txt
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: binhex.ic10  constant.ic10  hash.ic10  network.ic10  str.ic10
