[package]
name = "tree-sitter-ic10"
description = "Tree-sitter grammar for IC10 MIPS used in the game Stationeers"
version = "0.6.1"
keywords = ["incremental", "parsing", "ic10"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Xandaros/tree-sitter-ic10"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.25.7"

[build-dependencies]
cc = "1.0"
