[package]
name = "tree-sitter-ic10"
description = "Tree-sitter grammar for IC10 MIPS used in the game Stationeers"
version = "0.6.2"
keywords = ["incremental", "parsing", "ic10"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Xandaros/tree-sitter-ic10"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tree-sitter = "~0.25.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tree-sitter-c2rust = "~0.25.2"

[build-dependencies]
cc = "1.0"
tree-sitter-wasm-build-tool = "0.2.2"
